* Add `make all` target: build all available packages.
* Add `make download` target: download sources without build of packages.
* Add support of AstraLinux 1.5 [amd64] (static and shared).
* Stop support of AstraLinux 1.2 [amd64] (static and shared).
* Improve GetSources() function: show error message if size of downloaded
  tarball is equal to zero. (Only checksum mismatch was shown earlier.)
* Drop "-LTS" suffix from name of Ubuntu configs.
* Update patch for osgearth package: fix build with OSG 3.6.1 and newer.
* Update in all static configs:
  - OPENSSL_VER from 1.0.2n to 1.0.2o
* Update in all configs:
  - QT5_VER from 5.10.1 to 5.11.1
  - PROJ_VER from 5.0.0 to 5.1.0
  - OPENSCENEGRAPH_VER from 3.4.1 to 3.6.1

--- v3.1 (2018-03-21) ---
* Delete package: vlc.
* Add new package: libsignal-protocol-c.
* Add possibility to build manually selected list of static libraries in
  environments with shared libraries. See STATIC_PKG_LIST in settings.sh.
* Add USE_JPEG_TURBO variable to all configs: set it to "true" for using of
  libjpeg-turbo library instead of jpeg library.
* Add update-checksums-database.sh tool.
* Add patch to fix installation of shared library from package mxml.
* Add patch for sqlite package: enable extra function into SQLite API which is
  used by latest versions of Qt 5.x and is required for building of qtbase
  package in a shared libraries mode.
* Add patch for "make" package: add support of GLIBC glob interface version 2.
* Update configuration options in opencv package.
* Switch package sdl2 from autotools to cmake.
* Build package ffmpeg with x264 support.
* Update cmake toolchain file generated by package cmake-settings.
* Update in all configs:
  - FFMPEG_VER from 3.3.2 to 3.4.1
  - OPENCV_VER from 3.3.1 to 3.4.0
  - TINYXML2_VER from 4.0.1 to 6.0.0
  - PROTOBUF_VER from 3.4.0 to 3.5.1
  - OSGEARTH_VER from 2.8 to 2.9 (except AstraLinux 1.2)
  - QT5_VER from 5.10.0 to 5.10.1 (except AstraLinux 1.2)