@@ -104,7 +104,8 @@ LIBGCRYPT_VER=1.5.0
 OPENSSL_VER=1.0.1e
 OPENSSL_SUBVER=1.0.1
 
-HARFBUZZ_VER=0.9.28
+#HARFBUZZ_VER=0.9.28
+HARFBUZZ_VER=
 FREETYPE_VER=2.5.3
 FONTCONFIG_VER=2.11.0
 
