@@ -6,6 +6,8 @@
 * Stop support of AstraLinux 1.2 [amd64] (static and shared).
 * Improve GetSources() function: show error message if size of downloaded
   tarball is equal to zero. (Only checksum mismatch was shown earlier.)
+* Use special Build Glibc() function instead of BuildPkg() as a workaround to
+  rare and unpredictable build error: ".../shlib.lds:135: syntax error".
 * Drop "-LTS" suffix from name of Ubuntu configs.
 * Update patch for osgearth package: fix build with OSG 3.6.1 and newer.
 * Update in all static configs:
